(092) Java, Aspekty, Własna adnotacja, Wstrzykiwanie danych do parametru metody